# hackeurope

./: .gitignore  GEMINI.md  README.md  app.py  assistant.py  audio_processing.py  data.py  mistral_api_app.py  pyproject.toml  requirements.txt  test_mistral_speech.py  test_webrtc.py  webrtc_helper.py
agents/: MedicalDiagnosisAgent.py  __init__.py  agent.py  answer_parser.py  medical_dataset.py  question_strategy.py  reporter.py  scorer.py  semantic_index.py  updater.py
backend/: agents.py  audio_processing.py  llm_client.py  main_agent.py  mappers.py  medicalDiagnosisAgent.py  prompts.py  qaGenie.py  questionGenie.py  schemas.py  test_questionGenie.py  test_triageGenie.py  triageGenie.py
data/: mock_database.md
patients/: Elias.json  donald_trump.json  john.json  john_doe.json
