[project]
name = "hackeurope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "streamlit-webrtc>=0.64.5",
    "websocket-client>=1.9.0",
]
